# verbum

./: .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_CODE_GUIDE.md  Dockerfile  Makefile  README.es.md  README.md  README.pt.md  ROADMAP_V2.md  UX_PLAN.md  VERBUM_PLAN.md  VERBUM_REVISION_PLAN.md  VERBUM_V1_LAUNCH_PLAN.md  docker-compose.yml  firebase.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
dashboard/: app.py
data/static/: aramaic_john_1.json  aramaic_lords_prayer.json  authors.json  community_notes.json  community_notes_seed.jsonl  devotional_plans.json  devotional_plans_es.json  devotional_plans_pt.json  explorer_presets.json  literary_structures.json  open_questions.json  secular_events.json  semantic_genealogy.json  semantic_genealogy_es.json  semantic_genealogy_pt.json  special_passages_catalog.json  synoptic_parallels.json
docs/: CLAUDE-REFLECTION.md
docs/archive/: README.md  VERBUM_PLAN.md  VERBUM_V1_LAUNCH_PLAN.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
infra/: README.md
scripts/: audit_dictionary_quality.py  dictionary_coverage.py  discover_bible_brain_filesets.py  download_usfx_translations.py  fetch_luther_nt.py  fix_html_entities.py  fix_sin_topic_translations.py  fix_truncated_entries.py  generate_og_image.py  label_batch_004.py  load_community_seed.py  load_dictionary_batch.py  load_sentiment_batch.py  load_strongs_batch.py  prep_dictionary_batch.py  prep_dictionary_turns.py  prep_sentiment_batch.py  prep_strongs_batch.py  refetch_missing_chapters.py  sentiment_status.py  strongs_coverage.py  translate_dict_names.py  translate_dictionary_gemini.py  translate_topic_names.py  translate_topic_names_claude.py  translate_topic_names_gemini.py
src/: cli.py  config.py  pipeline.py
src/api/: main.py  (+2 more)
tests/: test_api.py  test_authors_api.py  test_community_api.py  test_compare_api.py  test_crossrefs.py  test_deep_analytics_api.py  test_devotional_api.py  test_emotional_api.py  test_extract.py  test_gemini.py  test_geocoding.py  test_home_api.py  test_intertextuality_api.py  test_load.py  test_map_api.py  test_morphhb.py  test_multilang.py  test_naves.py  test_open_questions_api.py  test_people_api.py  test_places_api.py  test_sblgnt.py  test_stepbible.py  test_strongs.py  test_structure_api.py  test_theographic.py  test_threads_api.py  test_timeline_api.py  test_topics_api.py  test_transform.py  test_word_journey_api.py
(+793 files in other folders)
